added screenshot changes

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 >Features</a
               >
               <a href="#screenshots" class="text-white hover:text-gray-200"
-                >Screenshots</a
+                >Visual Tour of the App</a
               >
               <a href="#contact" class="text-white hover:text-gray-200"
                 >Contact</a
@@ -120,8 +120,8 @@
                 Simplify Your Business Billing
               </h1>
               <p class="text-xl text-white mb-8">
-                A complete billing and inventory management solution designed
-                for Indian businesses
+                A complete solution for billing, inventory, and business
+                management—streamline operations and boost growth.
               </p>
               <div class="flex space-x-4">
                 <a
@@ -156,7 +156,9 @@
       <!-- Screenshots Slider -->
       <section id="screenshots" class="py-20 bg-white">
         <div class="container mx-auto px-6">
-          <h2 class="text-3xl font-bold text-center mb-16">App Screenshots</h2>
+          <h2 class="text-3xl font-bold text-center mb-16">
+            Visual Tour of the App
+          </h2>
           <div class="screenshot-slider">
             <button class="slider-nav slider-prev" id="prev-btn">
               <i data-lucide="chevron-left"></i>
@@ -225,7 +227,7 @@
                 </li>
                 <li>
                   <a href="#screenshots" class="text-gray-400 hover:text-white"
-                    >Screenshots</a
+                    >Visual Tour of the App</a
                   >
                 </li>
                 <li>
